--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^1.19.2
   cloud_firestore: ^3.3.0
+  firebase_storage: ^10.3.2
+  intl: ^0.17.0
+  google_fonts: ^3.0.1
 
   
 dev_dependencies:
