--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^1.19.2
+  firebase_auth: ^3.4.2
   cloud_firestore: ^3.3.0
   firebase_storage: ^10.3.2
-  intl: ^0.17.0
   google_fonts: ^3.0.1
+  intl: ^0.17.0
 
   
 dev_dependencies:
