--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,8 @@ dependencies:
   firebase_storage: ^10.3.2
   google_fonts: ^3.0.1
   intl: ^0.17.0
-  
+  url_launcher: ^6.1.5
+  google_maps_flutter: ^2.1.10
 
   
 dev_dependencies:
