--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   intl: ^0.17.0
   url_launcher: ^6.1.5
   google_maps_flutter: ^2.1.10
+  geolocator: ^9.0.1
 
   
 dev_dependencies:
