--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   url_launcher: ^6.1.5
   google_maps_flutter: ^2.1.10
   geolocator: ^9.0.1
+  image_picker: ^0.8.5+3
+  cached_network_image: ^3.2.1
 
   
 dev_dependencies:
