--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   geolocator: ^9.0.1
   image_picker: ^0.8.5+3
   cached_network_image: ^3.2.1
+  flutter_slidable: ^2.0.0
 
   
 dev_dependencies:
