--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   image_picker: ^0.8.5+3
   cached_network_image: ^3.2.1
   flutter_slidable: ^2.0.0
+  flutter_rating_bar: ^4.0.1
+  font_awesome_flutter: ^10.2.1
 
   
 dev_dependencies:
