--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -56,6 +56,7 @@
 			<string>sms</string>
 			<string>tel</string>
 			<string>mailto</string>
+			<string>https</string>
 		</array>
 		<key>NSLocationWhenInUseUsageDescription</key>
 		<string>This app needs access to location when open.</string>
